--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 .btn {
   background-color: purple;
   padding: 5px 8px;
+  margin-top: 12px;
   
 }
 .btn:hover {
@@ -12,35 +13,16 @@ body {
 }
 
 .App {
-  text-align: center;
+  text-align:left;
+  padding-left: 20px;
+  margin-right: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
